adding common css on header scction

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-single.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-single.scss
@@ -134,7 +134,7 @@
 						border:1px solid $border-gray;
 						padding: 40px 20px 20px;
 						margin-top:-1px;
-						background:$white_smoke;;
+						background:$white_smoke;
 							ul.specification-list{
 									li{ 
 										display:block;
