--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -5,14 +5,16 @@
   height: 600px;
 
   .half-height {
-    height: 50%;
+    height: 42%;
     padding-bottom: 15px;
+		clear:both;
 
     &:last-child {
       padding-bottom: 0;
       padding-top: 15px;
     }
   }
+	.home-top-add{ background:$space_gray; width:100%; height:15.8%; display:block;}
 }
 
 .product-block {
@@ -265,3 +267,5 @@
   }
 }
 // /.slider
+
+
