adding background css

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -14,7 +14,7 @@
       padding-top: 15px;
     }
   }
-	.home-top-add{ background:$space_gray; width:100%; height:15.8%; display:block;}
+	.home-top-add{ background:$space_gray; width:100%; height:15.8%; display:block; background-size:contain;}
 }
 
 .product-block {
