--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -5,7 +5,7 @@
   height: 600px;
 
   .half-height {
-    height: 42%;
+    height: 50%;
     padding-bottom: 15px;
 		clear:both;
 
@@ -13,8 +13,9 @@
       padding-bottom: 0;
       padding-top: 15px;
     }
+		.half-height.with-add{ height:42%;}
   }
-	.home-top-add{ background-color:$space_gray; width:100%; height:15.8%; display:block; background-size:contain;}
+	.home-top-add{ background-color:$space_gray; width:100%; height:15.8%; display:block;background-size: cover;}
 }
 
 .product-block {
