add link to ad top section

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -13,7 +13,8 @@
       padding-bottom: 0;
       padding-top: 15px;
     }
-		.half-height.with-add{ height:42%;}
+	&.with-add{ height:42%;}
+	
   }
 	.home-top-add{ background-color:$space_gray; width:100%; height:15.8%; display:block;background-size: cover;}
 }
