--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -279,6 +279,6 @@
 			width: 100%;
 			text-align:center;
 			vertical-align:middle;
-			background-size:contain;
+			background-size:cover;
 			}
 	}
