--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
@@ -1,5 +1,5 @@
 main {
-  clear: both;  
+  clear: both;
 }
 .section-divider {
   border-bottom: 2px solid $light_gray;
@@ -14,7 +14,6 @@ main {
   text-transform: uppercase;
 }
 .product-list-cntr {
-  
   ul.products {
     font-size: 0;
 
@@ -31,7 +30,7 @@ main {
       .product-info-cntr {
         margin-top: 20px;
         padding: 0 10px;
-        text-align: center;    
+        text-align: center;
 
         h3 {
           font-style: italic;
@@ -42,9 +41,7 @@ main {
           a:hover {
             color: $brick_red;
           }
-				
         }
-
         span.price {
           color: $black;
           font-size: 14px;
@@ -53,7 +50,6 @@ main {
           del {
             color: $space_gray;
           }
-
           ins {
             text-decoration: none;
           }
@@ -61,9 +57,11 @@ main {
       }
     }
   }
-
   .product-image-cntr .product-image {
     height: 200px;
   }
-	.star-rating{ left:50%;transform: translatex(-50%);}
+  .star-rating {
+    left: 50%;
+    transform: translatex(-50%);
+  }
 }
