Changes for all pages

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -27,6 +27,7 @@
 @import "components/landing";
 @import "components/map";
 @import "components/alert";
+@import "components/pagination";
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Dashboard Styles CSS ====== */
