--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-category-page.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-category-page.scss
@@ -52,10 +52,15 @@
 .item-list-cntr {
   background: $light_gray;
   padding-bottom: 60px;
+  
+  ul {
+    margin: 0 5px;
+  }
 
   li {
     text-align: center;
     margin-bottom: 20px;
+    padding: 0 10px;
 
     a {
       background: $brick_red;
