--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-contact.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-contact.scss
@@ -1,9 +1,12 @@
 /* CSS Document */
-
 .contact-page{
 	label{
-			abbr{ color:red; text-decoration:none; border:none;padding-left: 3px;}
-		}
+				abbr{ color:red;
+				text-decoration:none; 
+				border:none;
+				padding-left: 3px;
+				}
+			}
 	input{
 			padding: 10px 15px;
     	border: 1px solid #dcdcdc;
