--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -130,3 +130,35 @@
     }
   }
 }
+
+// HERO SECTION WITH LOGO
+
+.landing-hero-cntr {
+  width:100%; 
+  height:100vh;
+  .logo-wrap {
+    width:840px; 
+    margin:0 auto; 
+    position:relative
+  }
+}
+#logo_svg {
+  width:100%; 
+  position:relative;
+  svg {
+    margin:15px 23px 15px;
+  }    
+}
+#img_cntr {
+  position: absolute; 
+  top:0; 
+  overflow:hidden; 
+  left:0; 
+  width:0; 
+  height:0;
+  svg{ 
+    box-sizing:border-box; 
+    padding:15px; 
+    overflow:auto;
+  }
+}
