--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -136,29 +136,115 @@
 .landing-hero-cntr {
   width:100%; 
   height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .logo-wrap {
-    width:840px; 
+    width:40%;
+    max-width: 80%; 
     margin:0 auto; 
-    position:relative
+    position:relative;
   }
 }
 #logo_svg {
   width:100%; 
   position:relative;
   svg {
-    margin:15px 23px 15px;
+    padding: 16px 0;
+    margin:0 23px;
   }    
 }
 #img_cntr {
   position: absolute; 
-  top:0; 
   overflow:hidden; 
+  opacity: 0;
+  top:-2px;   
   left:0; 
-  width:0; 
-  height:0;
+  bottom: 0;
+  right: 0;
   svg{ 
     box-sizing:border-box; 
-    padding:15px; 
+    padding:19px; 
     overflow:auto;
   }
 }
+
+.anim-shape {
+  -webkit-transform-origin: 0 150px;
+  -ms-transform-origin: 0 150px;
+  transform-origin: 0 150px;
+  -webkit-transform: scale(1, 2) rotate(270deg) translate(0, 0);
+  -ms-transform: scale(1, 2) rotate(270deg) translate(0, 0);
+  transform: scale(1, 2) rotate(270deg) translate(0, 0);
+  -webkit-animation: moving-panel 5s infinite alternate;
+  animation: moving-panel 5s infinite alternate;
+  opacity: 0.2
+}
+.colortext .anim-shape:nth-child(1) {
+  fill: #F2385A;
+}
+.colortext .anim-shape:nth-child(2) {
+  fill: #F5A503;
+}
+.colortext .anim-shape:nth-child(3) {
+  fill: #E9F1DF;
+}
+.colortext .anim-shape:nth-child(4) {
+  fill: #56D9CD;
+}
+.colortext .anim-shape:nth-child(5) {
+  fill: #3AA1BF;
+}
+.shadow {
+  -webkit-transform: translate(10px, 10px);
+  -ms-transform: translate(10px, 10px);
+  transform: translate(10px, 10px);
+}
+.anim-shape--shadow {
+  fill: #000;
+  fill-opacity: .2;
+}
+ @-webkit-keyframes moving-panel {
+ 100% {
+ -webkit-transform: scale(1, 1) translate(20px, 0);
+ transform: scale(1, 1) translate(20px, 0);
+}
+}
+@keyframes moving-panel {
+ 100% {
+ -webkit-transform: scale(1, 1) translate(20px, 0);
+ transform: scale(1, 1) translate(20px, 0);
+}
+}
+// HERO SECTION WITH LOGO END
+
+// HERO STICK NAV
+.stick-navigation-cntr {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  //background: $white;
+  //color: $black;
+  height: 60px;
+  line-height: 60px;
+
+  ul {
+    font-size: 0;
+
+    li {
+      font-size: 18px;
+      display: inline-block;
+      float: none;
+      vertical-align: top;
+
+      a {
+        text-transform: uppercase;
+        font-size: 16px;
+        padding: 0 20px;
+        font-weight: bold;
+      }
+    }
+  }
+}
+// HERO STICK NAV END
