--- a/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
@@ -351,3 +351,90 @@ body.page-template-register {
   50% { transform: translateY(0); }
   100% { transform: translateY(-100%); }
 }
+
+// Location Modal
+.location {
+  &-modal-cntr {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+
+    &.open-modal {
+      z-index: 999;
+      .location__modal-content {
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 350ms ease-in-out, visibility 350ms ease-in-out, transform 500ms cubic-bezier(0.680, -0.165, 0.265, 1.55);
+        transform: translate(-50%, -50%) scale(1);
+      }
+    }
+  }
+  &__modal-content {
+    opacity: 0; 
+    visibility: hidden;
+    position: absolute;
+    background: $white;
+    padding: 15px;
+    border-radius: 5px;
+    max-width: 640px;
+    width: 640px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    box-shadow: 0px 4px 5px 0px rgba(56, 56, 56, 0.5);
+    transition: transform 350ms cubic-bezier( 0.680, -0.550, 0.265, 1.18 ), opacity 500ms ease-out, visibility 500ms ease-out;
+  }
+  &__modal-heading {
+    padding-bottom: 6px;
+    border-bottom: 1px solid $black;
+
+    h4 {
+      text-transform: uppercase;
+      font-size: 18px;
+      color: $black;
+    }
+    a {
+      margin-top: 2px;
+      svg {
+        width: 13px;
+        height: 13px;
+        transition: all 0.3s ease-in;
+      }
+
+      &:hover svg {
+        fill: $brick_red;
+      }
+    }
+  }
+  &__modal-body {
+    padding: 15px 0 10px;
+
+    .form-group {
+      margin-bottom: 0;
+
+      #selected_location_label {
+        font-weight: bold;
+        margin-left: 5px;
+      }
+    }
+
+    #pac-input {
+      margin: 0;
+    }
+  }
+
+  &__modal-footer {
+    padding-top: 15px;
+    border-top: 1px solid $black;
+
+    .map--error {
+      color: red;
+      background: rgba(255, 0, 0, 0.16);
+      padding: 7px 20px;
+      float: left;
+    }
+  }
+}
